exports[`app.FirmwareDialog should render component 1`] = `<div />`;

exports[`app.LogEntry should render component 1`] = `<div />`;

exports[`app.LogHeader should render component 1`] = `<div />`;

exports[`app.LogHeaderButton should render component 1`] = `<div />`;

exports[`app.LogViewer should render component 1`] = `<div />`;

exports[`app.MainView should render component 1`] = `
<div>
  <h3>
    default title
  </h3>
</div>
`;

exports[`app.NavBar should render component 1`] = `<div />`;

exports[`app.NavMenu should render component 1`] = `
<div
  menuItems={
    Array [
      Object {
        "iconClass": "icon-star",
        "id": "about",
        "text": "About",
      },
    ]
  } />
`;

exports[`app.NavMenuItem should render component 1`] = `<div />`;

exports[`app.SerialPortSelector should render component 1`] = `<div />`;

exports[`app.SerialPortSelectorItem should render component 1`] = `<div />`;

exports[`app.SidePanel should render component 1`] = `
<div>
  SidePanel content
</div>
`;
